Add Example of Continuation